// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel plugin should error when failed to resolve 1`] = `
"\\"use strict\\";

var _stylemug = _interopRequireDefault(require(\\"stylemug\\"));

var _mock = require(\\"./mock\\");

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { \\"default\\": obj }; }

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

var styles = _stylemug[\\"default\\"].create(_defineProperty({}, _mock.selector, {
  color: 'red'
}), \\"Failed to evaluate the following stylesheet: \\\\n\\\\nstylemug.create({\\\\n  [selector]: {\\\\n    color: 'red'\\\\n  }\\\\n})\\\\n\\\\nMake sure your stylesheet is statically defined.\\");"
`;

exports[`babel plugin should replace create argument 1`] = `
"\\"use strict\\";

var _stylemug = _interopRequireDefault(require(\\"stylemug\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { \\"default\\": obj }; }

var styles = _stylemug[\\"default\\"].create({
  className: {
    id: \\"hash\\"
  }
});"
`;

exports[`babel plugin should replace create argument multiple times in the same file 1`] = `
"\\"use strict\\";

var _stylemug = _interopRequireDefault(require(\\"stylemug\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { \\"default\\": obj }; }

var styles1 = _stylemug[\\"default\\"].create({
  className: {
    id: \\"hash\\"
  }
});

var styles2 = _stylemug[\\"default\\"].create({
  className: {
    id: \\"hash\\"
  }
});"
`;
